Bug 258320 - Konversation XDCC tab keeps Xorg/CPU busy
Summary: Konversation XDCC tab keeps Xorg/CPU busy
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: dcc (other bugs)
Version First Reported In: 0.12beta
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 23:32 UTC by Andreas Kuhl
Modified: 2012-04-21 15:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kuhl 2010-11-29 23:32:21 UTC
Version:           0.12beta (using KDE 4.5.80) 
OS:                Linux

I noticed that my notebook became quite noisy this evening and saw that Xorg constantly eats around 10%, warming it until my fan engages.If I minimize it to system tray, the CPU temp instantly sinks by 10 degrees and the Xorg load is gone.

I tested around a little and found out that this is caused by the XDCC tab. I am running 2 XDCC downloads in parallel, watching the XDCC tab. KWin repaint effect shows me that the progress bar is frequently repainted. Switching to another tab drops CPU load.

Reproducible: Always




OS: Linux (x86_64) release 2.6.35-2-desktop
Compiler: gcc
Comment 1 Bernd Buschinski 2012-04-21 15:18:43 UTC
Git commit c8671e1761336665f6af8f8b35f8450229d2fe43 by Bernd Buschinski.
Committed on 21/04/2012 at 17:11.
Pushed by buschinski into branch 'master'.

Set DCC Transferview update interval based on global KDE GraphicEffectLevel

ComplexAnimationEffects 500ms
SimpleAnimationEffects 1000ms
NoEffects/GradientEffects  2000ms

As KDE default is ComplexAnimationEffects, the default remains 500ms

M  +28   -1    src/dcc/transferview.cpp
M  +3    -0    src/dcc/transferview.h

http://commits.kde.org/konversation/c8671e1761336665f6af8f8b35f8450229d2fe43