Set DCC Transferview update interval based on global KDE GraphicEffectLevel

ComplexAnimationEffects 500ms
SimpleAnimationEffects 1000ms
NoEffects/GradientEffects  2000ms

As KDE default is ComplexAnimationEffects, the default remains 500ms

BUG:258320